--- a/package.json
+++ b/package.json
@@ -32,15 +32,24 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/websockets": "^8.4.4",
+    "api": "^5.0.5",
+    "aws-sdk": "^2.1304.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "compress-images": "^2.0.5",
+    "image-thumbnail": "^1.0.15",
+    "imagemagick": "^0.1.3",
+    "jimp": "^0.16.2",
     "nestjs-i18n": "^9.0.12",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rxjs": "^7.5.5",
+    "sharp": "^0.31.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.5",
@@ -49,7 +58,10 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
+    "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.36",
+    "@types/passport": "^1.0.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
     "@types/supertest": "^2.0.10",
