--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "compress-images": "^2.0.5",
-    "image-thumbnail": "^1.0.15",
-    "imagemagick": "^0.1.3",
-    "jimp": "^0.16.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "nestjs-i18n": "^9.0.12",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -49,6 +47,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5",
     "sharp": "^0.31.3",
+    "thumbsupply": "^0.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
